# openCap

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Info.plist  LICENSE  README.md  REFACTORING_SUMMARY.md  SECURITY.md  jietu.pro  openCap.pro  resources.qrc  test_clipboard.sh
.cache/clangd/index/: CursorManager.cpp.85C4B987CDB4A716.idx  CursorManager.h.B0ED6F8BEDADB4E1.idx  EventHandler.cpp.D6AE6FDB5AF647B8.idx  EventHandler.h.DD36165A8BF2AB4C.idx  IconProvider.cpp.FE38478E7B534410.idx  IconProvider.h.8D0508CC500615E1.idx  MacGlobalShortcut.h.DCE9952CD5178AC0.idx  MacGlobalShortcut.mm.E36AA61ADF930D7F.idx  MacWindowLevel.h.812BEABD9B1C4485.idx  MacWindowLevel.mm.1D79335C71D60D32.idx  PerformanceManager.cpp.030495BD1D5B3A57.idx  PerformanceManager.h.B331A141FB9FD955.idx  ScreenshotApp.cpp.E51B975A2A91D8AA.idx  ScreenshotApp.h.2CEDB4159AF2F99A.idx  ScreenshotOverlay.cpp.2CC8B76B1422C4F6.idx  ScreenshotOverlay.h.C9F2F1276A371308.idx  ScreenshotProcessor.cpp.9D4EAA68CC2DD3C0.idx  ScreenshotProcessor.h.2E6E3C62327E8509.idx  ScreenshotRenderer.cpp.8585D48D0CB25C8A.idx  ScreenshotRenderer.h.3581CE7A9F17F938.idx  ScreenshotToolbar.cpp.BD31DF84E6358BAF.idx  ScreenshotToolbar.h.24FE3CFF506408AE.idx  SelectionManager.cpp.E10371C48B9ABD56.idx  SelectionManager.h.C1C762A14022F9E6.idx  SystemTray.cpp.096F49EA14C21B2D.idx  SystemTray.h.18EB59D435649035.idx  UIManager.cpp.A19F4E37B72C6AEE.idx  UIManager.h.74F607D67858E948.idx  UIUtils.cpp.211E8FCB731106B6.idx  UIUtils.h.7E810099C3CCEDF6.idx  WindowLevelManager.cpp.FED4F3A046473D59.idx  WindowLevelManager.h.69B478421A84F257.idx  main.cpp.2E0C6EB5D0451986.idx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: EDITOR_SETUP.md  OPEN_SOURCE_CHECKLIST.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_CHANGES.md  README.md  USAGE.md
include/jietu/: MacGlobalShortcut.h  ScreenshotToolbar.h  SystemTray.h
include/openCap/: MacWindowLevel.h  ScreenshotApp.h  ScreenshotOverlay.h  ScreenshotRenderer.h
scripts/: build_watch.sh  dev_watch.sh  format_code.sh  package_arm.sh  package_intel.sh  rebuild.sh  start_jietu.sh  start_openCap.sh  test_jietu.sh  test_openCap.sh
src/: MacGlobalShortcut.mm  MacWindowLevel.mm  ScreenshotApp.cpp  ScreenshotOverlay.cpp  ScreenshotRenderer.cpp  ScreenshotToolbar.cpp  SystemTray.cpp  main.cpp
src/platform/mac/: MacGlobalShortcut.mm  MacWindowLevel.mm
src/screenshot/core/: ScreenshotApp.cpp  ScreenshotApp.h  ScreenshotOverlay.cpp  ScreenshotOverlay.h
src/screenshot/managers/: CursorManager.cpp  CursorManager.h  EventHandler.cpp  EventHandler.h  PerformanceManager.cpp  PerformanceManager.h  ScreenshotProcessor.cpp  ScreenshotProcessor.h  SelectionManager.cpp  SelectionManager.h  UIManager.cpp  UIManager.h  WindowLevelManager.cpp  WindowLevelManager.h
src/screenshot/ui/: IconProvider.cpp  IconProvider.h  ScreenshotRenderer.cpp  ScreenshotRenderer.h  ScreenshotToolbar.cpp  ScreenshotToolbar.h
src/system/: SystemTray.cpp
src/utils/: UIUtils.cpp  UIUtils.h
